--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 HTTP_PORT=80
 STATIC_DIR=static
+REPO_TYPE=postgres
+DB_HOST=localhost
+DB_USER=app
+DB_PASSWORD=app
+DB_NAME=app
+DB_SSLMODE=disable
